feat: implement footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -170,8 +170,6 @@ input[type="radio"].visually-hidden {
 
 /* normalize ends */
 
-@import url("https://fonts.googleapis.com/css?family=Quicksand&subset=latin&display=swap");
-
 :root {
   --transition-in: all 0.7s ease-out;
   --transition-out: all 0.3s linear;
@@ -182,7 +180,7 @@ input[type="radio"].visually-hidden {
   --section-margin: 5rem;
 
   box-sizing: border-box;
-  font-family: 'Quicksand', system-ui, Ubuntu, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, sans-serif;
+  font-family: "Quicksand", system-ui, Ubuntu, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, sans-serif;
   font-size: 10px;
   line-height: 20px;
   scroll-behavior: smooth;
@@ -258,7 +256,7 @@ input[type="radio"].visually-hidden {
 .logo {
   width: 70%;
   padding: 1rem;
-  font-family: 'Monoton', cursive;
+  font-family: "Monoton", cursive;
   font-size: 4rem;
   line-height: 4rem;
   color: var(--default-color);
@@ -329,8 +327,11 @@ input[type="radio"].visually-hidden {
   margin-bottom: var(--section-margin);
 }
 
-.about__title {
-  padding: 0 1rem;
+.about__title,
+.skills__title {
+  text-decoration: underline;
+  text-decoration-color: var(--warning-color);
+  padding: 0 0.5rem;
   margin: 0;
   font-size: 2.5rem;
   line-height: 5rem;
@@ -338,9 +339,50 @@ input[type="radio"].visually-hidden {
 }
 
 .about__paragraph {
-  padding: 0 1rem;
+  padding: 0 0.5rem;
   margin-bottom: 20px;
   font-size: 1.7rem;
   line-height: 2rem;
   text-align: justify;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 6.4rem;
+  color: var(--default-color);
+  backdrop-filter: blur(7px) opacity(0.5);
+  box-shadow: inset 0 3px 15px 5px rgba(0, 0, 0, 0.2);
+}
+
+.footer__link {
+  padding: 0 0 0 8rem;
+  color: var(--default-color);
+  text-decoration: none;
+}
+
+.contacts__link_twitter::before {
+  position: absolute;
+  bottom: 1rem;
+  left: 6rem;
+  display: block;
+  width: 4rem;
+  height: 4rem;
+  content: "";
+  background-image: url("/img/twitter.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 2px solid var(--default-color);
+  border-radius: 50%;
+}
+
+.footer__description {
+  font-family: "Neucha", cursive;
+  font-size: 2.5rem;
 }
