feat: implement navigation

--- a/styles/style.css
+++ b/styles/style.css
@@ -246,8 +246,8 @@ input[type="radio"].visually-hidden {
   z-index: 1;
   display: grid;
   width: 100%;
-  height: var(--header-height);
-  margin-bottom: var(--section-margin);
+  min-height: var(--header-height);
+  margin-bottom: 2rem;
   color: var(--default-color);
   background: var(--background-color);
   background: var(--background-element-gradient);
@@ -283,14 +283,14 @@ input[type="radio"].visually-hidden {
   display: grid;
   grid-template-rows: 400px 100px 40px;
   grid-template-columns: 1fr;
-  min-height: 90vh;
+  min-height: 80vh;
 }
 
 .meet--title {
   padding: 0 1rem;
   margin: 0;
-  font-size: 3rem;
-  line-height: 5rem;
+  font-size: 3.5rem;
+  line-height: 6rem;
   text-align: center;
   place-self: center center;
 }
@@ -298,6 +298,7 @@ input[type="radio"].visually-hidden {
 .meet--paragraph {
   margin: 0;
   font-size: 2rem;
+  line-height: 7rem;
   color: var(--danger-color);
   place-self: start center;
   transition: var(--transition-out);
@@ -338,6 +339,7 @@ input[type="radio"].visually-hidden {
 .title {
   padding: 0 1rem;
   margin: 0 auto;
+  margin-bottom: 2rem;
   font-size: 2.5rem;
   line-height: 5rem;
   text-align: center;
@@ -411,12 +413,18 @@ input[type="radio"].visually-hidden {
   color: var(--danger-color);
 }
 
+.skills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .progress--area {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 400px;
+  padding: 0;
+  margin: 0;
 }
 
 .progress--item {
@@ -461,13 +469,88 @@ input[type="radio"].visually-hidden {
   transition: all 5s ease-out;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
+  .container {
+    max-width: var(--tablet-width);
+  }
+}
+
+@media (min-width: 1280px) {
   .container {
     max-width: var(--desktop-width);
   }
 
   .header {
-    height: 70px;
+    display: flex;
+    margin-bottom: calc(var(--section-margin) * 2.5);
+  }
+
+  .logo {
+    width: 20%;
+  }
+
+  .navigation {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+  }
+
+  .navigation--list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+  .navigation--item {
+    list-style: none;
+    cursor: pointer;
+    transition: var(--transition-in);
+  }
+
+  .navigation--item:hover {
+    transition: var(--transition-out);
+    transform: scale(1.1, 1.1);
+  }
+
+  .navigation--item-link {
+    padding: 1rem;
+    font-size: 2.3rem;
+    color: var(--default-color);
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    vertical-align: middle;
+    border: 2px solid var(--default-color);
+    border-radius: 1rem;
+    transition: var(--transition-in);
+  }
+
+  .navigation--item-link:hover {
+    filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.7));
+    border-color: var(--warning-color);
+    transition: var(--transition-out);
+  }
+
+  .meet--title {
+    padding: 0 1rem;
+    margin: 0;
+    font-size: 4.5rem;
+    line-height: 7rem;
+    text-align: center;
+    place-self: center center;
+  }
+
+  .progress--area {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 400px;
   }
 
   .footer {
