--- a/styles/style.css
+++ b/styles/style.css
@@ -247,12 +247,21 @@ input[type="radio"].visually-hidden {
   display: grid;
   width: 100%;
   min-height: var(--header-height);
-  margin-bottom: 2rem;
   color: var(--default-color);
   background: var(--background-color);
   background: var(--background-element-gradient);
   backdrop-filter: blur(5px) opacity(0.5);
   box-shadow: 0 3px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.toggler {
+  width: 70px;
+  height: 70px;
+  margin: 1rem;
+  cursor: pointer;
+  background-color: var(--background-color);
+  border-radius: 50%;
+  place-self: center end;
 }
 
 .logo {
@@ -279,11 +288,11 @@ input[type="radio"].visually-hidden {
 }
 
 .meet {
-  position: relative;
   display: grid;
   grid-template-rows: 400px 100px 40px;
   grid-template-columns: 1fr;
   min-height: 80vh;
+  margin-top: 2rem;
 }
 
 .meet--title {
@@ -428,10 +437,25 @@ input[type="radio"].visually-hidden {
 }
 
 .progress--item {
+  position: relative;
   list-style: none;
 }
 
-.progress--item-svg {
+.progress--inner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: calc(50% - 50px);
+  left: calc(50% - 50px);
+  z-index: -1;
+  font-size: 3rem;
+}
+
+.progress--circle {
   width: 240px;
   height: 240px;
 }
@@ -481,8 +505,8 @@ input[type="radio"].visually-hidden {
   }
 
   .header {
+    position: fixed;
     display: flex;
-    margin-bottom: calc(var(--section-margin) * 2.5);
   }
 
   .logo {
@@ -534,6 +558,10 @@ input[type="radio"].visually-hidden {
     filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.7));
     border-color: var(--warning-color);
     transition: var(--transition-out);
+  }
+
+  .meet {
+    margin-top: 20rem;
   }
 
   .meet--title {
