--- a/styles/style.css
+++ b/styles/style.css
@@ -195,6 +195,7 @@ input[type="radio"].visually-hidden {
   background: var(--info-color);
   background: var(--background-main-gradient);
   border-color: var(--background-color);
+  transition: var(--transition-in);
 }
 
 .theme-light {
@@ -260,8 +261,21 @@ input[type="radio"].visually-hidden {
   margin: 1rem;
   cursor: pointer;
   background-color: var(--background-color);
+  border: 4px solid var(--background-color);
   border-radius: 50%;
   place-self: center end;
+  transition: var(--transition-in);
+}
+
+.toggler:hover {
+  border-color: var(--danger-color);
+  transition: var(--transition-in);
+}
+
+.navigation--item-link:active,
+.toggler:active {
+  background-color: var(--succes-color);
+  border-color: var(--info-color);
 }
 
 .logo {
@@ -542,19 +556,23 @@ input[type="radio"].visually-hidden {
   }
 
   .navigation--item-link {
+    display: block;
+    min-width: 150px;
     padding: 1rem;
     font-size: 2.3rem;
-    color: var(--default-color);
+    color: var(--primary-color);
+    filter: opacity(0.6);
+    background-color: var(--background-color);
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    vertical-align: middle;
     border: 2px solid var(--default-color);
     border-radius: 1rem;
     transition: var(--transition-in);
   }
 
   .navigation--item-link:hover {
+    filter: opacity(0.8);
     filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.7));
     border-color: var(--warning-color);
     transition: var(--transition-out);
